similar_sites.css: Add additional qualifier to avoid extra spacing.

--- a/share/spice/similar_sites/similar_sites.css
+++ b/share/spice/similar_sites/similar_sites.css
@@ -2,11 +2,11 @@
     vertical-align: middle;
 }
 
-.zci--similar_sites div {
+.zci--similar_sites .zci__body div {
     margin-bottom: 5px;
 }
 
-.zci--similar_sites div > a {
+.zci--similar_sites .zci__body div > a {
     font-size: 1.357em;
     font-weight: 300;
     vertical-align: middle;
